# EchoSphere-The-Digital-Doppelg-nger-Forge-

./: INTRODUCTION.me  README.md  phase1_conceptual_outline.md
echosystem/: .gitignore
echosystem/docs/: README.md  echosphere_final_summary.md  phase1_conceptual_outline.md  phase2_conceptual_outline.md  phase3_conceptual_outline.md  phase4_conceptual_outline.md  phase5_conceptual_outline.md
echosystem/maipp/: .gitignore  candidate_store_service.py  config.py  consent_client_service.py  data_handler_service.py  feature_store_service.py  iac_conceptual_graph_db_pkg.md  maipp_orchestrator.py  models.py  pkg_service_client.py  pyproject.toml  trait_derivation_service.py
echosystem/maipp/ai_adapters/: base_adapter.py  google_gemini_adapter.py
echosystem/maipp/tests/: test_ai_adapters.py  test_candidate_store_service.py  test_consent_client_service.py  test_data_handler_service.py  test_feature_store_service.py  test_integration_maipp.py  test_main_orchestrator.py  test_pkg_service_client.py  test_trait_derivation_service.py
echosystem/models/: README.md
echosystem/phase1/ai_persona_analysis/: README.md  analysis_data_structures.py  maipp.py
echosystem/phase2_feedback_engine/: .gitignore  pyproject.toml
echosystem/phase2_feedback_engine/app/: config.py  main.py
echosystem/phase2_feedback_engine/app/api/: api_v1_router.py
echosystem/phase2_feedback_engine/app/api/endpoints/: feedback_endpoint.py  sandbox_orchestration_endpoint.py
echosystem/phase2_feedback_engine/app/db/: behavioral_model_db_schemas.md  feedback_db_schemas.py
echosystem/phase2_feedback_engine/app/models/: behavioral_model_models.py  feedback_models.py  sandbox_models.py
echosystem/phase2_feedback_engine/app/services/: behavioral_model_updater_service.py  feedback_processor_service.py
echosystem/phase2_feedback_engine/tests/: test_behavioral_model_updater_service.py  test_feedback_endpoint.py  test_feedback_models.py  test_feedback_processor_service.py  test_sandbox_orchestration_endpoint.py
echosystem/ptfi/: .gitignore  config.py  db_clients.py  db_schemas.py  main.py  models.py  pkg_service_client_ptfi.py  pyproject.toml
echosystem/ptfi/tests/: test_integration_ptfi.py  test_main_ptfi_api.py  test_pkg_service_client_ptfi.py
echosystem/services/: README.md
echosystem/specs/: phase1_maipp_api_specifications.md  phase1_maipp_core_logic.md  phase1_maipp_data_models.md  phase1_maipp_implementation_tasks.md  phase1_maipp_technology_stack.md  phase1_maipp_testing_strategies.md  phase1_overall_implementation_plan.md  phase1_ptfi_api_specifications.md  phase1_ptfi_core_logic.md  phase1_ptfi_data_models.md  phase1_ptfi_implementation_tasks.md  phase1_ptfi_technology_stack.md  phase1_ptfi_testing_strategies.md  phase1_udim_api_specifications.md  phase1_udim_core_logic.md  phase1_udim_data_models.md  phase1_udim_implementation_tasks.md  phase1_udim_technology_stack.md  phase1_udim_testing_strategies.md
echosystem/tests/: README.md
echosystem/udim/: .gitignore  config.py  iac_conceptual_s3_kms.md  iac_conceptual_sqs.md  main.py  pyproject.toml  s3_service.py  sqs_service.py
echosystem/udim/tests/: test_integration_udim.py  test_main_upload_endpoint.py  test_s3_service.py
echosystem/utils/: README.md  privacy_protocol.py
project_doppelganger/: README.md  __init__.py  requirements.txt
project_doppelganger/src/: main_doppelganger.py
project_doppelganger/tests/: test_main_doppelganger_integration.py
(+77 files in other folders)
