[tool.poetry]
name = "echosphere-phase2-feedback-engine"
version = "0.1.0" # Initial version
description = "Feedback Engine for EchoSphere Phase 2"
authors = ["AI Agent <ai@example.com>"]
readme = "README.md" # Optional: create a README.md later if needed

[tool.poetry.dependencies]
python = "^3.9" # Assuming Python 3.9+
fastapi = "^0.100.0" # Choose a recent stable version
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^2.0.0" # Or stick to Pydantic v1 if other modules use it, for now V2
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
structlog = "^23.0.0"
boto3 = "^1.28.0"
asyncpg = "^0.28.0" # Added asyncpg

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
